--- a/TP1/Makefile
+++ b/TP1/Makefile
@@ -16,8 +16,8 @@ CC            = gcc
 CXX           = g++
 DEFINES       = -DQT_NO_DEBUG -DQT_OPENGL_LIB -DQT_WIDGETS_LIB -DQT_GUI_LIB -DQT_XML_LIB -DQT_CORE_LIB
 CFLAGS        = -pipe -O2 -Wall -W -D_REENTRANT -fPIC $(DEFINES)
-CXXFLAGS      = --std=c++11 -O2 -std=gnu++11 -Wall -W -D_REENTRANT -fPIC $(DEFINES)
-INCPATH       = -I. -isystem /usr/include/x86_64-linux-gnu/qt5 -isystem /usr/include/x86_64-linux-gnu/qt5/QtOpenGL -isystem /usr/include/x86_64-linux-gnu/qt5/QtWidgets -isystem /usr/include/x86_64-linux-gnu/qt5/QtGui -isystem /usr/include/x86_64-linux-gnu/qt5/QtXml -isystem /usr/include/x86_64-linux-gnu/qt5/QtCore -I. -I/usr/lib/x86_64-linux-gnu/qt5/mkspecs/linux-g++
+CXXFLAGS      = --std=c++11 -Wno-deprecated -Wno-deprecated-declarations -Wno-deprecated-copy -O2 -std=gnu++11 -Wall -W -D_REENTRANT -fPIC $(DEFINES)
+INCPATH       = -I. -I../../Downloads/libQGLViewer-2.7.2 -isystem /usr/include/x86_64-linux-gnu/qt5 -isystem /usr/include/x86_64-linux-gnu/qt5/QtOpenGL -isystem /usr/include/x86_64-linux-gnu/qt5/QtWidgets -isystem /usr/include/x86_64-linux-gnu/qt5/QtGui -isystem /usr/include/x86_64-linux-gnu/qt5/QtXml -isystem /usr/include/x86_64-linux-gnu/qt5/QtCore -I. -I/usr/lib/x86_64-linux-gnu/qt5/mkspecs/linux-g++
 QMAKE         = /usr/lib/qt5/bin/qmake
 DEL_FILE      = rm -f
 CHK_DIR_EXISTS= test -d
@@ -37,10 +37,10 @@ MOVE          = mv -f
 TAR           = tar -cf
 COMPRESS      = gzip -9f
 DISTNAME      = viewer1.0.0
-DISTDIR = /mnt/c/Users/chate/Documents/GitHub/Info804_TP/TP1/.tmp/viewer1.0.0
+DISTDIR = /home/user/Desktop/TP1_Chatel/.tmp/viewer1.0.0
 LINK          = g++
 LFLAGS        = -Wl,-O1
-LIBS          = $(SUBLIBS) -L/usr/lib/x86_64-linux-gnu -lQGLViewer-qt5 /usr/lib/x86_64-linux-gnu/libGL.so /usr/lib/x86_64-linux-gnu/libQt5OpenGL.so /usr/lib/x86_64-linux-gnu/libQt5Widgets.so /usr/lib/x86_64-linux-gnu/libQt5Gui.so /usr/lib/x86_64-linux-gnu/libQt5Xml.so /usr/lib/x86_64-linux-gnu/libQt5Core.so -lpthread   
+LIBS          = $(SUBLIBS) -L/home/user/Downloads/libQGLViewer-2.7.2/QGLViewer -lQGLViewer-qt5 /usr/lib/x86_64-linux-gnu/libGL.so /usr/lib/x86_64-linux-gnu/libQt5OpenGL.so /usr/lib/x86_64-linux-gnu/libQt5Widgets.so /usr/lib/x86_64-linux-gnu/libQt5Gui.so /usr/lib/x86_64-linux-gnu/libQt5Xml.so /usr/lib/x86_64-linux-gnu/libQt5Core.so -lpthread   
 AR            = ar cqs
 RANLIB        = 
 SED           = sed
@@ -53,9 +53,11 @@ OBJECTS_DIR   = ./
 ####### Files
 
 SOURCES       = Viewer.cpp \
-		main.cpp 
+		main.cpp \
+		Utils.cpp 
 OBJECTS       = Viewer.o \
-		main.o
+		main.o \
+		Utils.o
 DIST          = /usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/spec_pre.prf \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/common/unix.conf \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/common/linux.conf \
@@ -112,6 +114,7 @@ DIST          = /usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/spec_pre.prf \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/qt_config.prf \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/linux-g++/qmake.conf \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/spec_post.prf \
+		.qmake.stash \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/exclusive_builds.prf \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/toolchain.prf \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/default_pre.prf \
@@ -130,8 +133,10 @@ DIST          = /usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/spec_pre.prf \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/exceptions.prf \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/yacc.prf \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/lex.prf \
-		viewer.pro Viewer.h Viewer.cpp \
-		main.cpp
+		viewer.pro Viewer.h \
+		Utils.h Viewer.cpp \
+		main.cpp \
+		Utils.cpp
 QMAKE_TARGET  = viewer
 DESTDIR       = 
 TARGET        = viewer
@@ -199,6 +204,7 @@ Makefile: viewer.pro /usr/lib/x86_64-linux-gnu/qt5/mkspecs/linux-g++/qmake.conf 
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/qt_config.prf \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/linux-g++/qmake.conf \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/spec_post.prf \
+		.qmake.stash \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/exclusive_builds.prf \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/toolchain.prf \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/default_pre.prf \
@@ -218,7 +224,7 @@ Makefile: viewer.pro /usr/lib/x86_64-linux-gnu/qt5/mkspecs/linux-g++/qmake.conf 
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/yacc.prf \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/lex.prf \
 		viewer.pro \
-		/usr/lib/x86_64-linux-gnu/libQGLViewer-qt5.prl
+		../../Downloads/libQGLViewer-2.7.2/QGLViewer/libQGLViewer-qt5.prl
 	$(QMAKE) -o Makefile viewer.pro
 /usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/spec_pre.prf:
 /usr/lib/x86_64-linux-gnu/qt5/mkspecs/common/unix.conf:
@@ -276,6 +282,7 @@ Makefile: viewer.pro /usr/lib/x86_64-linux-gnu/qt5/mkspecs/linux-g++/qmake.conf 
 /usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/qt_config.prf:
 /usr/lib/x86_64-linux-gnu/qt5/mkspecs/linux-g++/qmake.conf:
 /usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/spec_post.prf:
+.qmake.stash:
 /usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/exclusive_builds.prf:
 /usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/toolchain.prf:
 /usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/default_pre.prf:
@@ -295,7 +302,7 @@ Makefile: viewer.pro /usr/lib/x86_64-linux-gnu/qt5/mkspecs/linux-g++/qmake.conf 
 /usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/yacc.prf:
 /usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/lex.prf:
 viewer.pro:
-/usr/lib/x86_64-linux-gnu/libQGLViewer-qt5.prl:
+../../Downloads/libQGLViewer-2.7.2/QGLViewer/libQGLViewer-qt5.prl:
 qmake: FORCE
 	@$(QMAKE) -o Makefile viewer.pro
 
@@ -311,8 +318,8 @@ distdir: FORCE
 	@test -d $(DISTDIR) || mkdir -p $(DISTDIR)
 	$(COPY_FILE) --parents $(DIST) $(DISTDIR)/
 	$(COPY_FILE) --parents /usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/data/dummy.cpp $(DISTDIR)/
-	$(COPY_FILE) --parents Viewer.h $(DISTDIR)/
-	$(COPY_FILE) --parents Viewer.cpp main.cpp $(DISTDIR)/
+	$(COPY_FILE) --parents Viewer.h Utils.h $(DISTDIR)/
+	$(COPY_FILE) --parents Viewer.cpp main.cpp Utils.cpp $(DISTDIR)/
 
 
 clean: compiler_clean 
@@ -342,7 +349,7 @@ compiler_moc_predefs_make_all: moc_predefs.h
 compiler_moc_predefs_clean:
 	-$(DEL_FILE) moc_predefs.h
 moc_predefs.h: /usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/data/dummy.cpp
-	g++ --std=c++11 -O2 -std=gnu++11 -Wall -W -dM -E -o moc_predefs.h /usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/data/dummy.cpp
+	g++ --std=c++11 -Wno-deprecated -Wno-deprecated-declarations -Wno-deprecated-copy -O2 -std=gnu++11 -Wall -W -dM -E -o moc_predefs.h /usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/data/dummy.cpp
 
 compiler_moc_header_make_all:
 compiler_moc_header_clean:
@@ -362,11 +369,30 @@ compiler_clean: compiler_moc_predefs_clean
 
 ####### Compile
 
-Viewer.o: Viewer.cpp Viewer.h
+Viewer.o: Viewer.cpp Viewer.h \
+		../../Downloads/libQGLViewer-2.7.2/QGLViewer/qglviewer.h \
+		../../Downloads/libQGLViewer-2.7.2/QGLViewer/camera.h \
+		../../Downloads/libQGLViewer-2.7.2/QGLViewer/keyFrameInterpolator.h \
+		../../Downloads/libQGLViewer-2.7.2/QGLViewer/quaternion.h \
+		../../Downloads/libQGLViewer-2.7.2/QGLViewer/vec.h \
+		../../Downloads/libQGLViewer-2.7.2/QGLViewer/config.h \
+		../../Downloads/libQGLViewer-2.7.2/QGLViewer/frame.h \
+		../../Downloads/libQGLViewer-2.7.2/QGLViewer/constraint.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o Viewer.o Viewer.cpp
 
-main.o: main.cpp Viewer.h
+main.o: main.cpp Viewer.h \
+		../../Downloads/libQGLViewer-2.7.2/QGLViewer/qglviewer.h \
+		../../Downloads/libQGLViewer-2.7.2/QGLViewer/camera.h \
+		../../Downloads/libQGLViewer-2.7.2/QGLViewer/keyFrameInterpolator.h \
+		../../Downloads/libQGLViewer-2.7.2/QGLViewer/quaternion.h \
+		../../Downloads/libQGLViewer-2.7.2/QGLViewer/vec.h \
+		../../Downloads/libQGLViewer-2.7.2/QGLViewer/config.h \
+		../../Downloads/libQGLViewer-2.7.2/QGLViewer/frame.h \
+		../../Downloads/libQGLViewer-2.7.2/QGLViewer/constraint.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o main.o main.cpp
+
+Utils.o: Utils.cpp Utils.h
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o Utils.o Utils.cpp
 
 ####### Install
 
