TP2 clean, nettoyage TP1

--- a/TP2/Makefile
+++ b/TP2/Makefile
@@ -54,10 +54,12 @@ OBJECTS_DIR   = ./
 
 SOURCES       = Viewer.cpp \
 		ray-tracer.cpp \
-		Sphere.cpp 
+		Sphere.cpp \
+		PeriodicPlane.cpp 
 OBJECTS       = Viewer.o \
 		ray-tracer.o \
-		Sphere.o
+		Sphere.o \
+		PeriodicPlane.o
 DIST          = /usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/spec_pre.prf \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/common/unix.conf \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/common/linux.conf \
@@ -144,9 +146,12 @@ DIST          = /usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/spec_pre.prf \
 		Image2D.h \
 		Image2DWriter.h \
 		Renderer.h \
-		Ray.h Viewer.cpp \
+		Ray.h \
+		Background.h \
+		PeriodicPlane.h Viewer.cpp \
 		ray-tracer.cpp \
-		Sphere.cpp
+		Sphere.cpp \
+		PeriodicPlane.cpp
 QMAKE_TARGET  = ray-tracer
 DESTDIR       = 
 TARGET        = ray-tracer
@@ -326,8 +331,8 @@ distdir: FORCE
 	@test -d $(DISTDIR) || mkdir -p $(DISTDIR)
 	$(COPY_FILE) --parents $(DIST) $(DISTDIR)/
 	$(COPY_FILE) --parents /usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/data/dummy.cpp $(DISTDIR)/
-	$(COPY_FILE) --parents Viewer.h PointVector.h Color.h Sphere.h GraphicalObject.h Light.h Material.h PointLight.h Image2D.h Image2DWriter.h Renderer.h Ray.h $(DISTDIR)/
-	$(COPY_FILE) --parents Viewer.cpp ray-tracer.cpp Sphere.cpp $(DISTDIR)/
+	$(COPY_FILE) --parents Viewer.h PointVector.h Color.h Sphere.h GraphicalObject.h Light.h Material.h PointLight.h Image2D.h Image2DWriter.h Renderer.h Ray.h Background.h PeriodicPlane.h $(DISTDIR)/
+	$(COPY_FILE) --parents Viewer.cpp ray-tracer.cpp Sphere.cpp PeriodicPlane.cpp $(DISTDIR)/
 
 
 clean: compiler_clean 
@@ -387,6 +392,7 @@ Viewer.o: Viewer.cpp Viewer.h \
 		Light.h \
 		Renderer.h \
 		Image2D.h \
+		Background.h \
 		Image2DWriter.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o Viewer.o Viewer.cpp
 
@@ -410,6 +416,9 @@ Sphere.o: Sphere.cpp Sphere.h \
 		Color.h \
 		Ray.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o Sphere.o Sphere.cpp
+
+PeriodicPlane.o: PeriodicPlane.cpp PeriodicPlane.h
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o PeriodicPlane.o PeriodicPlane.cpp
 
 ####### Install
 
